[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labutil"
authors = [
    {name = "Austin Hurst", email = "mynameisaustinhurst@gmail.com"},
]
description = "Management tool for data collection computers in cognitive science labs"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Click",
    "PyYAML",
    "platformdirs",
    "pipenv",
    "pywin32; platform_system=='Windows'",
]
dynamic = ["version"]

[project.scripts]
labutil = "labutil.cli:labutil"

[tool.setuptools.dynamic]
version = {attr = "labutil.VERSION"}
